<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_chat"
        android:icon="@drawable/ic_tab_chat"
        android:title="@string/tab_chat" />

    <item
        android:id="@+id/tab_devices"
        android:icon="@drawable/ic_tab_devices"
        android:title="@string/tab_self" />

    <item
        android:id="@+id/tab_map"
        android:icon="@drawable/ic_tab_map"
        android:title="@string/tab_network" />

    <item
        android:id="@+id/tab_settings"
        android:icon="@drawable/ic_tab_settings"
        android:title="@string/tab_settings" />

    <item
        android:id="@+id/tab_ble"
        android:icon="@drawable/ic_tab_ble"
        android:title="@string/tab_connect" />

</menu>